<resources>
    <string name="app_name">Mami Agent</string>
    <string name="submit_text">Submit</string>
    <string name="sign_in_title">Agent Checker Dashboard</string>
    <string name="sign_in_phone_hint">Ketik nomer handphone</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="verify_message_text">A temporary pin code has been sent to the phone number provided via SMS. Please check your phone and enter the pin below.</string>
    <string name="verify_hint_text">Enter 6 digit code</string>
    <string name="verify_button_text">Verify</string>
    <string name="list_kost_data_text">Data</string>
    <string name="list_kost_edited_text">Edited</string>
    <string name="kost_item_photo_text">Photo :</string>
    <string name="kost_item_review_text">Review :</string>
    <string name="success_submit_title">DATA BERHASIL DISUBMIT !</string>
    <string name="success_submit_subtitle">data kamu akan segera kami verifikasi</string>
    <string name="success_submite_next_text">Next</string>
    <string name="check_in_address_text">Alamat</string>
    <string name="check_in_phone_text">Telepon</string>
    <string name="check_in_button_text">Check In</string>
    <string name="check_in_title">Check In Kost</string>
    <string name="check_in_subtitle">PENTING !</string>
    <string name="check_in_message_text">- Pastikan anda sudah berada di kos yang dituju\n- Potret selfie CHECK IN di depan bangunan kost,  koridor atau di depan palang "terima kost"\n- Editlah data dengan teliti, karena begitu sudah di submit, tidak bisa diedit kembali\n- Bila ada kesalahan edit, hubungi koordinator</string>
    <string name="photo_navbar_text">Foto</string>
    <string name="room_available_text">Kamar Kosong</string>
    <string name="hint_room_available_text">Masukan jumlah kamar kosong (wajib)</string>
    <string name="hint_comment">Masukan komentar</string>
    <string name="photo_cover_text">Foto Cover (wajib)</string>
    <string name="photo_front_text">Foto Depan (wajib)</string>
    <string name="photo_room_text">Foto Kamar (wajib)</string>
    <string name="photo_bath_text">Foto Kamar Mandi (wajib)</string>
    <string name="photo_speedtest_text">Screen Shoot Speedtest (optional)</string>
    <string name="photo_facility_text">Foto Fasilitas Lainnya (wajib)</string>
    <string name="review_cleanup_title">Kebersihan</string>
    <string name="review_security_title">Keamanan</string>
    <string name="review_facility_title">Fasilitas Kamar</string>
    <string name="review_comfort_title">Kenyamanan</string>
    <string name="review_price_title">Harga</string>
    <string name="review_facility_general_title">Fasilitas Umum</string>
    <string name="review_edittext_hint">Tulis review disini</string>
    <string name="review_photo_text">Foto Review</string>
    <string name="msg_back_pressed">Klik back sekali lagi untuk keluar!</string>
    <string name="note_map">Klik marker merah untuk menampilkan tombol rute di kanan bawah</string>
    <string name="change">Ganti</string>
    <string name="camera_action_text">Tekan Kamera Untuk Melanjutkan</string>
    <string name="statistic_title">Statistik</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="search">Search</string>
    <string name="comment">Komentar</string>
    <string name="facility">Fasilitas</string>
    <string name="msg_add_data_ads">Tambah data iklan</string>
    <string name="msg_see_data_local">Lihat data lokal</string>
    <string name="msg_see_data_history">Lihat data histori</string>
    <string name="msg_data_location">Data lokasi</string>
    <string name="msg_data_kos">Data kos</string>
    <string name="msg_filter">Filter</string>
    <string name="msg_clear_data">Bersihkan data</string>
    <string name="msg_data_facility_kos">Fasilitas kos</string>
    <string name="msg_data_owner_kos">Data pemilik</string>
    <string name="msg_province_star">Provinsi*</string>
    <string name="msg_province">Provinsi</string>
    <string name="msg_example_province">Yogyakarta</string>
    <string name="msg_city_star">Kota*</string>
    <string name="msg_city">Kota</string>
    <string name="msg_district_star">Kecamatan*</string>
    <string name="msg_district">Kecamatan</string>
    <string name="msg_input_data_location">Input data lokasi</string>
    <string name="msg_input_data_kos">Input data kos</string>
    <string name="msg_input_facility_data_kos">Input fasilitas kos</string>
    <string name="msg_data_history_agen">Data histori</string>
    <string name="msg_complete_address_star">Alamat lengkap*</string>
    <string name="msg_complete_address">Alamat lengkap</string>
    <string name="msg_map_location_start">Peta lokasi kos*</string>
    <string name="msg_map_location">Peta lokasi kos</string>
    <string name="msg_map_back">Kembali</string>
    <string name="msg_map_next">Selanjutnya</string>
    <string name="msg_kos_name_star">Nama kos* (Harus unik, bisa ditambah alamat lengkap)</string>
    <string name="msg_kos_name">Nama kos</string>
    <string name="msg_please_wait">Mohon tunggu...</string>
    <string name="msg_man">Putra</string>
    <string name="msg_women">Putri</string>
    <string name="msg_mix">Campur</string>
    <string name="msg_kos_type">Tipe kos</string>
    <string name="msg_room_size">Luas kamar</string>
    <string name="msg_room_total_star">Jumlah kamar total*</string>
    <string name="msg_room_total">Jumlah kamar total</string>
    <string name="msg_room_total_now_star">Jumlah kamar kosong saat ini*</string>
    <string name="msg_room_total_now">Jumlah kamar kosong saat ini</string>
    <string name="msg_pay_by">Pembayaran berdasarkan*</string>
    <string name="msg_pay_by_no_star">Pembayaran berdasarkan</string>
    <string name="msg_room_price">Harga kamar</string>
    <string name="msg_per_month">/ Bulan</string>
    <string name="msg_per_day">/ Hari</string>
    <string name="msg_per_week">/ Minggu</string>
    <string name="msg_per_year">/ Tahun</string>

    <string name="msg_pay_month">Perbulan</string>
    <string name="msg_pay_day">Perhari</string>
    <string name="msg_pay_week">Perminggu</string>
    <string name="msg_pay_year">Pertahun</string>
    <string name="msg_min_pay">Min. Pembayaran</string>
    <string name="msg_was_electricity">Sudah termasuk listrik</string>
    <string name="msg_was_not_electricity">Belum termasuk listrik</string>
    <string name="msg_was_empty">Kosongan</string>
    <string name="msg_was_not_empty">Sudah isi</string>
    <string name="msg_inside">Didalam</string>
    <string name="msg_outside">Diluar</string>
    <string name="msg_other_facility_room">Fasilitas kamar lainnya</string>
    <string name="msg_other_facility">Fasilitas lainnya</string>
    <string name="msg_facility_room">Fasilitas kamar</string>
    <string name="msg_facility_bathroom">Fasilitas kamar mandi</string>
    <string name="msg_mbps">/ mbps</string>
    <string name="msg_bed">Kasur</string>
    <string name="msg_park_car">Parkir mobil</string>
    <string name="msg_twenty_four">Akses 24 jam</string>
    <string name="msg_can_couple">Bisa Pasutri</string>
    <string name="msg_cupboard">Lemari</string>
    <string name="msg_wifi">Wifi</string>
    <string name="msg_shower">Shower</string>
    <string name="msg_squat_toilet">Kloset jongkok</string>
    <string name="msg_squat_seat">Kloset duduk</string>
    <string name="msg_hot_water">Air panas</string>
    <string name="msg_chair">Kursi</string>
    <string name="msg_table">Meja</string>
    <string name="msg_ac">AC</string>
    <string name="msg_tv">TV</string>
    <string name="msg_fan">Kipas Angin</string>
    <string name="msg_owner_name_star">Nama Pemilik*</string>
    <string name="msg_owner_name">Nama Pemilik</string>
    <string name="msg_owner_phone_star">Nomor Telp Pemilik*</string>
    <string name="msg_owner_phone">Nomor Telp Pemilik</string>
    <string name="msg_owner_email">Email (opsional)</string>
    <string name="msg_email">Email</string>
    <string name="msg_create_password">Buat password</string>
    <string name="msg_yes">Iya</string>
    <string name="msg_later">Nanti, simpan dulu</string>
    <string name="msg_no">Tidak</string>
    <string name="msg_send">Kirim</string>
    <string name="msg_repeat_password">Ulangi password</string>
    <string name="msg_ex_image_landscape">Contoh foto landscape</string>
    <string name="msg_image_building">Foto bangunan kos</string>
    <string name="msg_image_bathroom">Foto kamar mandi</string>
    <string name="msg_image_inside_room">Foto dalam kamar</string>
    <string name="msg_select_file">Pilih gambar</string>
    <string name="msg_select_gallery">Pilih dari gallery</string>
    <string name="msg_select_camera">Pilih dari kamera</string>
    <string name="msg_select_camera_1">Pilih dari kamera 1</string>
    <string name="msg_select_camera_2">Pilih dari kamera 2</string>
    <string name="msg_exit">Yakin kamu mau keluar?</string>
    <string name="msg_local_data">Data lokal kamu</string>
    <string name="msg_allow_this_feature">Aplikasi membutuhkan izin untuk bisa menggunakan fitur, izinkan?</string>
    <string name="msg_data_confirmation">Kirim data sekarang?</string>
    <string name="msg_input_owner_data">Input data pemilik kos</string>
    <string name="msg_privacy">Dengan menampilkan kos Anda di Mamikos, <b><u>Anda menyatakan setuju</u></b> menerima review tentang kos Anda sendiri dari pengguna Mamikos.</string>
    <string name="msg_image_kos_landscape">Foto-foto Kos <font color='red'>(Harus landscape)</font></string>

</resources>
