<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/toolbar_app" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:padding="10dp"
                android:text="@string/room_available_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRoomAvailable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_room_available_text"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:padding="10dp"
                android:text="@string/photo_cover_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.mamikos.mamiagent.views.ExpandableHeightGridView
                android:id="@+id/gvCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:padding="10dp"
                android:verticalSpacing="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:padding="10dp"
                android:text="@string/photo_front_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.mamikos.mamiagent.views.ExpandableHeightGridView
                android:id="@+id/gvBuilding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:padding="10dp"
                android:verticalSpacing="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:padding="10dp"
                android:text="@string/photo_room_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.mamikos.mamiagent.views.ExpandableHeightGridView
                android:id="@+id/gvRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:padding="10dp"
                android:verticalSpacing="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:padding="10dp"
                android:text="@string/photo_bath_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.mamikos.mamiagent.views.ExpandableHeightGridView
                android:id="@+id/gvBathRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:padding="10dp"
                android:verticalSpacing="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:padding="10dp"
                android:text="@string/photo_speedtest_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.mamikos.mamiagent.views.ExpandableHeightGridView
                android:id="@+id/gvSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:padding="10dp"
                android:verticalSpacing="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:padding="10dp"
                android:text="@string/photo_facility_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.mamikos.mamiagent.views.ExpandableHeightGridView
                android:id="@+id/gvOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:padding="10dp"
                android:verticalSpacing="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:padding="10dp"
                android:text="@string/comment"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:focusableInTouchMode="true"
                    android:gravity="top"
                    android:hint="@string/hint_comment"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:maxLines="8"
                    android:minLines="3" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnNextPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_color_apptheme"
                android:text="@string/success_submite_next_text"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:theme="@style/ProgressBarOrange"
        android:visibility="gone" />
</RelativeLayout>