<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textStyle="bold"
            android:text="@string/verify_message_text"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="18sp"/>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/verify_hint_text"
            android:gravity="center"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/verify_button_text"
            android:background="@drawable/button_color_apptheme"
            android:textColor="@color/white"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>
    </LinearLayout>
</RelativeLayout>