<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mami_success"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success_submit_title"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@color/accent"
            android:gravity="center"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success_submit_subtitle"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_submite_next_text"
            android:textColor="@color/white"
            android:background="@drawable/button_color_apptheme"
            android:padding="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>